# claude-code-orchestrator

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  STATUS_REPORT.md  TEST_README.md  pyproject.toml  test_nested_paths.py  test_v0_5_0.py  test_v0_5_4.py
docs/: README.md  api.md  architecture.md  scripts.md  troubleshooting.md
sessions/: 2025-10-26.md  2025-10-27--path-fix-validation.md  2025-10-27.md  2025-10-28.md  2025-11-13.md  2025-11-15.md  2025-11-17.md  2025-11-18.md  2025-11-24.md  2025-11-28.md  2025-11-30.md
src/orchestrator/: __init__.py  models.py
src/orchestrator/cli/: __init__.py
src/orchestrator/core/: actor.py  changelog.py  checkpoint.py  completion_summary.py  context.py  contracts.py  critic.py  docs.py  domain_context.py  experiments.py  failure_diagnosis.py  features.py  feedback.py  goal_alignment.py  goal_evaluator.py  goal_gap_analyzer.py  history.py  logger.py  long_jobs.py  notes.py  orchestrator.py  parallel_executor.py  planner.py  progress.py  replanner.py  reviewer.py  subagent.py  tester.py  validators.py  verification.py
src/orchestrator/planning/: goals.py  tasks.py
src/orchestrator/tools/: run_script.py
test-orchestrator-v0.5.0/: .gitignore
test-orchestrator-v0.5.0/.agentic/: full_history.jsonl  orchestrator.config.yaml
test-orchestrator-v0.5.0/.agentic/current/: GOALS.md  TASKS.md
