[project]
name = "agentic-orchestrator"
version = "0.6.0"
description = "Self-orchestrating agentic system using Claude Code CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "networkx>=3.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
orchestrate = "orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.uv.workspace]
members = [
    "example-projects/stock-picker",
    "example-projects/stock-price-tracker/backend",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
